--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    dataBinding {
-        enabled true
-    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -64,12 +61,10 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
     implementation 'com.karumi:dexter:6.1.0'
 
-    //Dagger
-    implementation "com.google.dagger:dagger:2.26"
-    implementation "com.google.dagger:dagger-android:2.26"
-    implementation "com.google.dagger:dagger-android-support:2.26"
-    kapt "com.google.dagger:dagger-compiler:2.26"
-    kapt "com.google.dagger:dagger-android-processor:2.26"
+    implementation "org.koin:koin-androidx-scope:2.1.3"
+    implementation "org.koin:koin-androidx-viewmodel:2.1.3"
+    implementation "org.koin:koin-androidx-fragment:2.1.3"
+    implementation "org.koin:koin-androidx-ext:2.1.3"
 
     //Glide
     implementation "com.github.bumptech.glide:glide:4.11.0"
